src/sample/Errors/C0036.st
// C0036: Cannot call object of type '{name}'
FUNCTION_BLOCK FB_C0036
    GVL_C0036();
    E_C0036();
    ST_C0036();
    U_C0036();
END_FUNCTION_BLOCK

VAR_GLOBAL GVL_C0036
    //
END_VAR

TYPE E_C0036 :
(
    dummy
);
END_TYPE

TYPE ST_C0036 :
STRUCT
    //
END_STRUCT
END_TYPE

TYPE U_C0036 :
UNION
    //
END_UNION
END_TYPE